--- a/main.html
+++ b/main.html
@@ -8,6 +8,14 @@
 
 <body>
 	<!-- the entire body must be written by student -->
+	<div class='sounds' id="buttons">
+		<button id="btn1" class="box btn">applause</button>
+		<button id="btn2" class="box btn">boo</button>
+		<button id="btn3" class="box btn">gasp</button>
+		<button id="btn4" class="box btn">victory</button>
+		<button id="btn5" class="box btn">wrong</button>
+		<button id="btn6" class="box stop">stop</button>
+	</div>
     <script type="text/javascript" src="./script.js">
 </script>
 
